hphp/hack/test/typecheck/concurrent/error/concurrent_complex_assign.php.exp
File "concurrent_complex_assign.php", line 7, characters 21-22:
Lval can no longer be used as an expression. Pull it out into it's own statement. (Parsing[1002])
